--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "szyk"
+license = "ISC"
 version = "0.1.0"
 authors = ["nm <mnkisala@gmail.com>"]
 edition = "2018"
+description = "generic topological sort"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
